--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/vercel-builder": "^0.21.3",
     "@tailwindcss/forms": "^0.3.3",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
