build config and dev setting

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "NODE_ENV=production node server.js",
     "generate": "nuxt generate",
     "test:e2e": "wdio wdio.conf.js"
   },
