--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "tailwindcss": "^2.2.7",
-    "v-owl-carousel": "^1.0.8"
+    "v-owl-carousel": "^1.0.8",
+    "vue-flickity": "^1.2.1"
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^1.3.0",
